<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.content.Context" />
        <import type="com.thangtv.mynote.util.Utils" />

        <variable
            name="note"
            type="com.thangtv.mynote.data.entity.Note" />
        <variable
            name="viewModel"
            type="com.thangtv.mynote.viewmodel.AddNoteViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="MissingConstraints">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/flexible.example.toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@null"
                    app:layout_collapseMode="pin"
                    />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="#DFDFDF"
            android:scrollbars="none"
            app:behavior_overlapTop="78dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="PrivateResource" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/background">

                    <EditText
                        android:id="@+id/ed_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:background="@null"
                        android:hint="@string/title_title"
                        android:inputType="text"
                        android:autofillHints="@string/title_description"
                        android:text="@={note.title}" />

                    <View
                        android:id="@+id/line9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/cardview_dark_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ed_title"
                        tools:ignore="PrivateResource" />

                    <EditText
                        android:id="@+id/ed_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line9"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:hint="@string/title_description"
                        android:text="@={note.description}"
                        android:inputType="text"
                        android:autofillHints="@string/title_description" />

                </androidx.constraintlayout.widget.ConstraintLayout>



                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:padding="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout1"
                    android:background="@color/background">


                    <TextView
                        android:id="@+id/tv_title_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_start"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tv_start_date_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title_start"
                        app:layout_constraintEnd_toStartOf="@id/tv_start_time_alert"
                        app:layout_constraintTop_toTopOf="@id/tv_title_start"
                        tools:text="ngày 9 tháng 19 năm 2020"
                        android:onClick="@{() -> viewModel.startDateAlertPicker.show()}"/>

                    <TextView
                        android:id="@+id/tv_start_time_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title_start"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_start"
                        tools:text="09:09"
                        android:onClick="@{() -> viewModel.startTimeAlertPicker.show()}"/>

                    <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/cardview_dark_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_start"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/tv_title_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/title_end"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line2" />


                    <TextView
                        android:id="@+id/tv_end_date_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        tools:text="ngày 9 tháng 19 năm 2020"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title_end"
                        app:layout_constraintEnd_toStartOf="@id/tv_start_time_alert"
                        app:layout_constraintTop_toTopOf="@id/tv_title_end"
                        android:onClick="@{() -> viewModel.endDateAlertPicker.show()}"/>

                    <TextView
                        android:id="@+id/tv_end_time_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="09:09"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title_end"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_end"
                        android:onClick="@{() -> viewModel.endTimeAlertPicker.show()}"/>

                    <View
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/cardview_dark_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_end"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/tv_title_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/title_repeat"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line3" />

                    <TextView
                        android:id="@+id/tv_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{Utils.INSTANCE.convertRepeat(context, note.repeat)}"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title_repeat"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_repeat" />

                    <View
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/cardview_dark_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_repeat"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/tv_title_time_transport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/title_time_transport"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line4" />

                    <TextView
                        android:id="@+id/tv_time_transport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Không"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title_time_transport"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_time_transport" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layout2"
                    android:background="@color/background"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tv_title_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_alert"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Không"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title_alert"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_alert" />

                    <View
                        android:id="@+id/line7"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/cardview_dark_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_alert"
                        tools:ignore="PrivateResource" />

                    <TextView
                        android:id="@+id/tv_title_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/title_status"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line7" />

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Bận"
                        app:layout_constraintBottom_toBottomOf="@id/tv_title_status"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/tv_title_status" />

                    <View
                        android:id="@+id/line8"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/cardview_dark_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_status"
                        tools:ignore="PrivateResource" />

                    <EditText
                        android:id="@+id/ed_note"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:background="@null"
                        android:ems="10"
                        android:gravity="start|top"
                        android:hint="@string/title_note"
                        android:text="@={note.note}"
                        android:inputType="textMultiLine"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line8"
                        android:autofillHints="@string/title_note" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>